doc: document user api
