# controllers/user/UpdateUser.go
@@ -9,6 +9,13 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Update user by ID
+// @Tags User
+// @Param id path int true "User ID"
+// @Param user body models.User false "User object"
+// @Produce json
+// @Success 200 {object} models.User "Success"
+// @Router /user/{id} [put]
 func UpdateUser(c *gin.Context) {
 	_id := c.Param("id")
 
